gcc/testsuite/gdc.test/compilable/test6541.d
class C
{
    static synchronized func(alias a)() {}
}

void main()
{
    int a;
    C.func!a();
}
