gcc/testsuite/gdc.test/fail_compilation/fail4269f.d

static if(is(typeof(X16))) {}
alias X16 X16;

void main() {}
